--- a/dom/dom-introducao.html
+++ b/dom/dom-introducao.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introdução ao DOM</title>
-    <script src="dom-introducao.js" defer></script>
+
+    <script src="dom-introducao.html" defer></script>
 </head>
 
 <body>
