--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
-    <a href="./dom/dom-introducao.html">Introdução ao DOM</a>
+    <ul>
+        <li><a href="./dom/dom-introducao.html">Introdução ao DOM</a></li>
+        <li><a href="./explicacao/introdução-js.html">Introdução ao JS</a></li>
+        <li><a href="./explicacao/testes-logicos.html">Testes lógicos</a></li>
+    <ul>
 </body>
 </html>
