troquei o nome do arquivo dom

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <ul>
-        <li><a href="./dom/dom-introducao.html">Introdução ao DOM</a></li>
+        <li><a href="./dom/getElements.html">Introdução ao DOM</a></li>
         <li><a href="./explicacao/introdução-js.html">Introdução ao JS</a></li>
         <li><a href="./explicacao/testes-logicos.html">Testes lógicos</a></li>
     <ul>
