--- a/dom/getElements.html
+++ b/dom/getElements.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introdução ao DOM</title>
 
-    <script src="dom-introducao.js" defer></script>
+    <script src="getElements.js" defer></script>
 </head>
 
 <body>
