adicionei tipos de eventos no arquivo

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="./dom/getElements.html">Introdução ao DOM</a></li>
         <li><a href="./explicacao/introdução-js.html">Introdução ao JS</a></li>
         <li><a href="./explicacao/testes-logicos.html">Testes lógicos</a></li>
+        <li><a href="./evento/tipos-eventos.html">Tipos de Eventos no JavaScript</a></li>
     <ul>
 </body>
 </html>
