atualizei os links das páginas com os novos

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
 <body>
     <ul>
+        <li><a href="./basico/comandos-basicos.html">Comando básicos HTML</a></li>
+        <li><a href="./basico/estrutura-basica.html">Estrutura básica HTML</a></li>
+        <li><a href="./introducao-js/introdução-js.html">Introdução ao JS</a></li>
+        <li><a href="./testes-logicos-js/testes-logicos.html">Testes lógicos</a></li>
         <li><a href="./dom/getElements.html">Introdução ao DOM</a></li>
-        <li><a href="./explicacao/introdução-js.html">Introdução ao JS</a></li>
-        <li><a href="./explicacao/testes-logicos.html">Testes lógicos</a></li>
-        <li><a href="./evento/tipos-eventos.html">Tipos de Eventos no JavaScript</a></li>
+        <li><a href="./evento-js/tipos-eventos.html">Tipos de evento JS</a></li>
     <ul>
 </body>
 </html>
