arrumei a explicação para visualizar melhor na página

--- a/basico/html/comandos-basicos.html
+++ b/basico/html/comandos-basicos.html
@@ -21,7 +21,7 @@
 
     <!-- Grupo de links (nav) -->
     <nav>
-        <a href="#">Grupo de links</a>
+        <a href="#">Grupo de links (nav)</a>
     </nav>
 
     <!-- Quebra de linha (br) -->
@@ -33,33 +33,33 @@
     
     <!-- Divisão/ seção no documento -->
     <div>
-        <p>1</p>
-        <p>2</p>
+        <p>Esta é uma div</p>
+        <p>Esta é uma div</p>
     </div>
 
     <!-- Listas ordenadas com números-->
     <ol>
-        <li>Lista 1</li>
-        <li>Lista 2</li>
+        <li>Lista 1 (ol)</li>
+        <li>Lista 2 (ol)</li>
     </ol>
 
     <!-- Listas ordenadas com tópicos -->
     <ul>
-        <li>Lista 1</li>
-        <li>Lista 2</li>
+        <li>Lista 1 (ul)</li>
+        <li>Lista 2 (ul)</li>
     </ul>
 
     <!-- Imagens -->
-    <img src="local da imagem" alt="texto alternativo">
+    <img src="local da imagem" alt="texto alternativo"><br>
 
     <!-- Links -->
-    <a href="link">Texto que aparecerá na página</a>
+    <br><a href="link">Link simples</a><br>
 
     <!-- Links para outra página -->
-    <a href="link absoluto">Texto que aparecerá na página</a>
+    <br><a href="link absoluto">Link absoluto para ir para outra página</a><br>
 
     <!-- Abrir link em aba diferente -->
-    <a href="link" target="_blank">Texto que aparecerá na página</a>
+    <br><a href="link" target="_blank">Link com target="_blank" para abrir em aba diferente</a><br>
 
     <!-- Link para ir para parte da página -->
     <h1 id="parteDaPagina">Ir para uma parte da página</h1>
