comandos css sobre os textos

--- a/basico/css/comandos-basicos.html
+++ b/basico/css/comandos-basicos.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="comandos-basicos.css">
     <link rel="stylesheet" href="preenchimento-de-fundo.css">
     <link rel="stylesheet" href="fontes.css">
+    <link rel="stylesheet" href="textos.css">
 </head>
 
 <body>
@@ -29,7 +30,7 @@
 
     <h2>Preenchimento de fundo</h2>
     <ul>
-        <li>Background-color: define a cor de fundo</li>
+        <li class="corDeFundo">Background-color: define a cor de fundo</li>
         <li>Background-image: define a imagem de fundo</li>
         <li>Background-repeat: repeat-x: repete na horizontal</li>
         <li>Background-repeat: repeat-y: repete na vertical</li>
@@ -75,6 +76,47 @@
     <ul class="fontVariant">
         <li>font-variant: small-caps - caps um pouco abaixo da caixa alta</li>
     </ul>
+
+    <h2>Textos</h2>
+    <h3>text-align</h3>
+    <ul>
+        <li>Para alinhar o texto</li>
+        <li class="TAleft">left</li>
+        <li class="TAright">right</li>
+        <li class="TAcenter">center</li>
+        <li class="TAjustify">justify</li>
+    </ul>
+
+    <h3>text-transform</h3>
+    <ul>
+        <li class="TTupper">text-transform: uppercase - texto em maiúsculo</li>
+        <li class="TTlower">text-transform: lowercase - texto em minúsculo</li>
+        <li class="TTcapitalize">text-transform: capitalize - primeiras letras maiúsculas</li>
+    </ul>
+
+    <h3>text-decoration</h3>
+    <ul>
+        <li class="TDnone">text-decoration: none - remove decorações aplicadas</li>
+        <br><li class="TDunderline">text-decoration: underline - adiciona linhas abaixo do texto</li>
+        <br><li class="TDoverline">text-decoration: overline - adiciona linhas acima do texto</li>
+        <br><li class="TDlinet">text-decoration: line-through - adiciona linhas no meio do texto</li>
+        <br><li class="TDunderover">text-decoration: underline overline - adiciona linha em cima e embaixo do texto</li>
+    </ul>
+
+    <h3>text-shadow</h3>
+    <ul class="textShadow">
+        <li>Cria sombras nas letras do texto</li>
+        <li>text-shadow: horizontal, vertical, distorção, cor</li>
+    </ul>
+
+    <h3>Outras configurações</h3>
+    <ul>
+        <li class="lineHeight">line-height: espaçamento entre linhas</li>
+        <li class="letterSpacing">letter-spacing: espaçamento entre letras</li>
+        <li class="wordSpacing">word-spacing: espaçamento entre palavras</li>
+        <li class="textIdent">text-ident: recuo da primeira linha</li>
+    </ul>
+
 
 </body>
 </html>
