fiz meta do box-model

--- a/basico/css/comandos-basicos.html
+++ b/basico/css/comandos-basicos.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="preenchimento-de-fundo.css">
     <link rel="stylesheet" href="fontes.css">
     <link rel="stylesheet" href="textos.css">
+    <link rel="stylesheet" href="box-model.css">
 </head>
 
 <body>
@@ -117,6 +118,41 @@
         <li class="textIdent">text-ident: recuo da primeira linha</li>
     </ul>
 
+    <h2>Box-model</h2>
+    <ul class="altLar">
+        <li>width: define a largura</li>
+        <li>height: define a altura</li>
+        <li>min e max: define mínimo e máximo de largura ou altura</li>
+    </ul>
+
+    <h3>overflow</h3>
+    <ul>
+        <li class="OFhidden">overflow: hidden - oculta conteúdo que não cabe na caixa</li>
+        <li class="OFscroll">overflow: scroll - adiciona barra de rolagem</li>
+        <li class="OFauto">overflow: auto - adiciona barra de rolagem se necessário</li>
+    </ul>
+
+    <h3>border-width</h3>
+    <ul>
+        <li class="borderWidth">border-width: define a largura de todos os lados da borda</li>
+        <br><li class="borderLwidth">border-lado-width: define a largura de cada lado - top, right, left, bottom</li>
+    </ul>
+    <h3>border-style</h3> 
+    <ul>
+        <br><li class="borderStyle">border-style: estilo de todos os lados da borda</li>
+        <br><li class="borderLstyle">border-lado-style: define estilo de cada da lado da borda - top, right, left, bottom</li>
+        <br><li><b>Tipos de borda: </b>
+            <ul>
+                <li class="dotted">dotted</li>
+                <br><li class="dashed">dashed</li>
+                <br><li class="solid">solid</li>
+                <br><li class="double">double</li>
+                <br><li class="groove">groove</li>
+                <br><li class="ridge">ridge</li>
+                <br><li class="inset">inset</li>
+                <br><li class="outset">outset</li>
+            </ul>
+    </ul>
 
 </body>
 </html>
