--- a/basico/css/comandos-basicos.html
+++ b/basico/css/comandos-basicos.html
@@ -135,12 +135,11 @@
     <h3>border-width</h3>
     <ul>
         <li class="borderWidth">border-width: define a largura de todos os lados da borda</li>
-        <br><li class="borderLwidth">border-lado-width: define a largura de cada lado - top, right, left, bottom</li>
     </ul>
+
     <h3>border-style</h3> 
     <ul>
         <br><li class="borderStyle">border-style: estilo de todos os lados da borda</li>
-        <br><li class="borderLstyle">border-lado-style: define estilo de cada da lado da borda - top, right, left, bottom</li>
         <br><li><b>Tipos de borda: </b>
             <ul>
                 <li class="dotted">dotted</li>
@@ -153,6 +152,68 @@
                 <br><li class="outset">outset</li>
             </ul>
     </ul>
+    
+    <h3>border-color</h3>
+    <ul>
+        <li class="borderColor">border-color: define a cor da borda</li>
+    </ul>
 
+    <h3>Três propriedades juntas:</h3>
+    <ul>
+        <li class="borderTudo">border: width, style, color</li>
+    </ul>
+
+    <h2>Preenchimento</h2>
+    <h3>padding</h3>
+    <ul>
+        <li class="padding">Quanto será o espaço entre o conteúdo e a borda do elemento</li>
+    </ul>
+
+    <h2>Margem</h2>
+    <h3>margin</h3>
+    <ul>
+        <li class="margin">margin: define margem de todos os lados</li>
+        <li>Colocar auto na direita e na esquerda para centralizar</li>
+    </ul>
+
+    <h2>Sombra</h2>
+    <h3>box-shadow</h3>
+    <ul>
+        <li class="boxShadow">sombra em torno da caixa</li>
+        <li>box-shadow: horizontal vertical distorção cor</li>
+    </ul>
+
+    <h2>Cantos arredondados</h2>
+    <h3>border-radius</h3>
+    <ul>
+        <li class="borderRadius">border-radius: arredondar bordas da caixa</li>
+    </ul>
+
+    <h2>Preenchimento e borda</h2>
+    <h3>box sizing</h3>
+    <ul>
+        <li class="contentBox">content-box: preenchimento e borda não fazem parte do tamanho total</li>
+        <li class="borderBox">border-box: preenchimento e borda fazem parte do tamanho total</li>
+    </ul>
+
+    <h2>Posição dos elementos em relação aos demais da página</h2>
+    <h3>position</h3>
+    <ul>
+        <li class="pStatic">position: static - valor default</li>
+        <li class="pRelative">position: relative - move elementos em relação ao local onde ele estaria no fluxo normal</li>
+        <li class="pAbsolute">position: absolute - remove elemento do fluxo normal e não afeta mais os outros fuxos</li>
+        <li class="pFixed">position: fixed - marca o posicionamento em relação à janela</li>
+    </ul>
+
+    <h2>Elementos flutuantes</h2>
+    <h3>float</h3>
+    <ul class="float">
+        <li>Seleciona elemento do fluxo normal e posiciona à direita ou esquerda, com distância definida pelo width</li>
+    </ul>
+
+    <h3 class="clear">clear</h3>
+    <ul>
+        <li>Isola elementos flutuantes - nenhum elemento deve flutuar do lado selecionado do elemento</li>
+    </ul>
 </body>
 </html>
