organizei os links

--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
 </head>
 
 <body>
+    <h1>Básico</h1>
     <ul>
         <li><a href="./basico/html/comandos-basicos.html">Comando básicos HTML</a></li>
         <li><a href="./basico/html/estrutura-basica.html">Estrutura básica do HTML</a></li>
         <li><a href="./basico/css/comandos-basicos.html">Comandos básicos do CSS</a></li>
+    </ul>
+
+    <h1>JavaScript</h1>
+    <ul>
+        <li><a href="./introducao-js/introdução-js.html">Introdução ao JS</a></li>
+        <li><a href="./evento-js/tipos-eventos.html">Tipos de eventos no JS</a></li>
+        <li><a href="./dom/getElements.html">Introdução ao DOM</a></li>
+        <li><a href="./testes-logicos-js/testes-logicos.html">Testes lógicos</a></li>
     <ul>
 </body>
 </html>
