--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 </head>
 
 <body>
-    <h1>Básico</h1>
+    <h1>HTML</h1>
     <ul>
         <li><a href="./basico/html/comandos-basicos.html">Comando básicos HTML</a></li>
         <li><a href="./basico/html/estrutura-basica.html">Estrutura básica do HTML</a></li>
+    </ul>
+
+    <h1>CSS</h1>
+    <ul>
         <li><a href="./basico/css/comandos-basicos.html">Comandos básicos do CSS</a></li>
+        <li><a href="./flexbox/flexbox.html">Flexbox</a></li>
     </ul>
 
     <h1>JavaScript</h1>
