--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="./basico/html/comandos-basicos.html">Comando básicos HTML</a></li>
         <li><a href="./basico/html/estrutura-basica.html">Estrutura básica do HTML</a></li>
+        <li><a href="./basico/html/ordem.html">O que fazer quando criar um arquivo</a></li>
     </ul>
 
     <h1>CSS</h1>
