coloquei na página html algumas explicações

--- a/introducao-js/introdução-js.html
+++ b/introducao-js/introdução-js.html
@@ -11,5 +11,43 @@
 </head>
 
 <body>
+    <h1>Introdução ao JS</h1>
+
+    <h2>Ver o resultado</h2>
+    <h3>document.write("~~~")</h3>
+    <ul>
+        <li>Imprime o resultado no documento (na página)</li>
+    </ul>
+
+    <h3>console.log("~~~")</h3>
+    <ul>
+        <li>Imprime o resultado no console do navegador</li>
+    </ul>
+
+    <h3>Variáveis e tipos de dados</h3>
+    <ul>
+        <li>Faz diferenciação entre letras maiúsculas e minúsculas</li>
+        <li>Primeira palavra a letra é minúscula e o resto é maiúsculo</li>
+        <br><li>Exemplo: </li>
+        <ul>
+            <li>let nome; - variável com valor indefinido</li>
+            <li>let disciplina = null; - variável vazia</li>
+            <li>let texto = "~~" - variável com valor definido</li>
+        </ul>
+
+        <br><li>Tipos de variáveis:</li>
+        <ul>
+            <li>int - let idade = 18</li>
+            <li>float - let valor = 5.35</li>
+            <li>String - let nome = "Rafaella"</li>
+            <li>booleanos - let casado = "true"</li>
+            <li>array - let linguagens = ["java", "C#", "Python"]</li>
+        </ul>
+    </ul>
+    <h3>Manipulação de textos e números &</h3>
+    <h3>Caixas de mensagem</h3>
+    <ul>
+        <li>No JS</li>
+    </ul>
 </body>
 </html>
