coloquei na página html os tipos de testes lógicos

--- a/testes-logicos-js/testes-logicos.html
+++ b/testes-logicos-js/testes-logicos.html
@@ -11,5 +11,21 @@
 </head>
 
 <body>
+    <h1>Tipos de testes lógicos</h1>
+    
+    <h2>Switch case</h2>
+    <p>Trabalha com valores diretos</p>
+
+    <h2>For</h2>
+    <p>Repetição de instrução pelo número de vezes que precisar</p>
+
+    <h2>While</h2>
+    <p>Repete uma instrução enquanto determinada condição for verdadeira</p>
+
+    <h2>Do while</h2>
+    <p>Faz pelo menos uma vez a instrução, mesmo que a condição já inicie falsa</p>
+
+    <h2>Function</h2>
+    <p>Controla a execução das instruções</p>
 </body>
 </html>
