como fazer eestilizar tabelas

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="./basico/html/comandos-basicos.html">Comando básicos HTML</a></li>
         <li><a href="./basico/html/estrutura-basica.html">Estrutura básica do HTML</a></li>
         <li><a href="./basico/html/ordem.html">O que fazer quando criar um arquivo</a></li>
+        <li><a href="./tabela/tabela.html">Tabela</a></li>
     </ul>
 
     <h1>CSS</h1>
