--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="./basico/html/estrutura-basica.html">Estrutura básica do HTML</a></li>
         <li><a href="./basico/html/ordem.html">O que fazer quando criar um arquivo</a></li>
         <li><a href="./tabela/tabela.html">Tabela</a></li>
+        <li><a href="./formularios/formularios.html">Formulários</a></li>
     </ul>
 
     <h1>CSS</h1>
