--- a/tabela/tabela.html
+++ b/tabela/tabela.html
@@ -59,6 +59,15 @@
     <p><b>Na tag table: </b>colocar - border-collapse: ~~</p>
     <p><b>Na tag td,th: </b>colocar - border: 1px solid black - padding: ~~px</p>
 
+    <h2>Cor das linhas pares</h2>
+    <p>tr:nth-child(even) {background-color:}</p>
+
+    <h2>Cor das linhas ímpares</h2>
+    <p>tr:nth-child(odd) {background-color:}</p>
+
+    <h2>Cor para quando passar o mouse em cima</h2>
+    <p>tr:hover{background-color:}</p>
+
     <h1>Mesclar linhas e colunas: </h1>
     <p><b>colspan: </b>mescla um número determinado de colunas a partir da célula que contém o atributo - td colspan="2"</p>
     <table>
