tinha escrevido ranger ao invés de range

--- a/formularios/formularios.html
+++ b/formularios/formularios.html
@@ -89,7 +89,7 @@
             <input type="radio" name="tamanho" id="grande" value="G">
             <label for="grande">Grande</label>
             
-            <li><b>ranger: </b>renderiza uma barra para selecionar uma escala de valores - possui min, max e step</li>
+            <li><b>range: </b>renderiza uma barra para selecionar uma escala de valores - possui min, max e step</li>
             <input type="range" min="5" max="50" step="5">
             
             <li><b>reset: </b>limpa as informações digitadas no formulário</li>
