terminei o localStorage, só não entendi muito bem

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         <li><a href="./evento-js/tipos-eventos.html">Tipos de eventos no JS</a></li>
         <li><a href="./dom/getElements.html">Introdução ao DOM</a></li>
         <li><a href="./testes-logicos-js/testes-logicos.html">Testes lógicos</a></li>
+    </ul>
+
+    <h1>React</h1>
     <ul>
+        <li><a href="./react/localStorage/localStorage.html">localStorage</a></li>
+    </ul>
 </body>
 </html>
